docs: updates to reflect product simplifications (#7357)
* remove outdated pages and references to them

* change telemetry to a page instead of a directory with one page

* fix duplicate redirects

* remove vs code actions docs and references

* update hub introduction

* deprecate some context providers

* initial codebase and documentation guide

* replace context provider with MCP in custom code RAG

* deprecate @docs and @codebase

* remove context, docs, data blocks

* move context providers to deep dives

* move custom providers

* remove "blocks"

* remove rules "block"

* update popular providers

* cleanup before review

* updating more providers

* improve model reccs

* fix broken links

* add models links

* cleaning up models details

* move agent to first in list

* remove outdated descriptions

* reorder referene section

* update block types

* adjust model config example

* fix tabs for yaml / json

---------

Co-authored-by: Brian 'bdougie' Douglas <brian@dinnerpeople.app>

--- a/docs/reference/deprecated-docs.mdx
+++ b/docs/reference/deprecated-docs.mdx
@@ -1,20 +1,25 @@
 ---
-title: "How to Set Up @Docs Context Provider in Continue"
-description: Learn how to access and search your project's documentation directly within Continue
-keywords:
-  [
-    documentation,
-    indexing,
-    context provider,
-    embeddings,
-    docs,
-    embedder,
-    embeddings provider,
-    documentation,
-  ]
-toc_max_heading_level: 5
-sidebarTitle: "@Docs"
+title: "@Docs (Deprecated)"
+description: Deprecated documentation context provider - use the new documentation awareness approach instead
+keywords: [deprecated, documentation, docs, context, embeddings, legacy]
+noindex: true
 ---
+
+<Warning>
+  **This feature is deprecated.** The `@Docs` context provider has been deprecated in favor of a more integrated approach to documentation awareness. Please refer to our [Guide on Making Agents Aware of Codebases and Documentation](/guides/codebase-documentation-awareness) for the recommended approach.
+</Warning>
+
+## Migration Guide
+
+If you're currently using the `@Docs` context provider, please migrate to the new approach outlined in our [codebase and documentation awareness guide](/guides/codebase-documentation-awareness). The new approach provides:
+
+- Better integration with Continue's Agent features
+- More intelligent context selection
+- Improved performance and accuracy
+
+## Legacy Documentation
+
+**Below is the original documentation for the `@Docs` context provider, preserved for reference**
 
 The `@Docs` context provider allows you to efficiently reference documentation directly within Continue.
 
@@ -53,9 +58,7 @@ The `@Docs` context provider works by
 
 ## How to Index Your Own Documentation
 
-### Using Hub `docs` Blocks
-
-@Docs uses [`docs` blocks](../../hub/blocks/block-types#docs) in Assistants from the hub. Visit the hub to [explore `docs` blocks](https://hub.continue.dev/explore/docs) or [create your own](https://hub.continue.dev/new?type=block&blockType=docs).
+**Note:** Documentation configuration should now be done directly in your `config.yaml` file. The previous `docs` blocks functionality has been deprecated.
 
 ### How to Add Documentation Through the @Docs Context Provider
 
@@ -116,11 +119,11 @@ Indexing will re-sync upon saving the configuration file.
 
 ### How to Use Your Custom Embeddings Provider
 
-If you have set up an [embeddings provider](../model-roles/embeddings.mdx), @docs will use your embeddings provider. Switching embeddings providers will trigger a re-index of all documentation sites in your configuration.
+If you have set up an [embeddings provider](../customize/model-roles/embeddings.mdx), @docs will use your embeddings provider. Switching embeddings providers will trigger a re-index of all documentation sites in your configuration.
 
 ### How to Configure Reranking for Better Results
 
-As with [@Codebase context provider configuration](./codebase#configuration), you can adjust the reranking behavior of the `@Docs` context provider with the `nRetrieve`, `nFinal`, and `useReranking`.
+As with [@Codebase context provider configuration](./deprecated-codebase#configuration), you can adjust the reranking behavior of the `@Docs` context provider with the `nRetrieve`, `nFinal`, and `useReranking`.
 
 <Tabs>
   <Tab title="YAML">
@@ -216,7 +219,7 @@ If your documentation is private, you can skip the default crawler and use a loc
   The default local crawler is a lightweight tool that cannot render sites that
   are dynamically generated using JavaScript. If your sites need to be rendered,
   you can enable the experimental `Use Chromium for Docs Crawling` feature from
-  your [User Settings Page](../settings) This will download and install Chromium
+  your User Settings Page. This will download and install Chromium
   to `~/.continue/.utils`, and use it as the local crawler. **Note:** Chromium
   crawling support is being deprecated and may be removed in future versions.
 </Info>
@@ -281,7 +284,7 @@ The following configuration example works out of the box for VS Code. This uses 
 
 ### How to Set Up @Docs in JetBrains IDEs (Minimal Configuration)
 
-Here is the equivalent minimal example for Jetbrains, which requires setting up an [embeddings provider](../model-roles/embeddings.mdx).
+Here is the equivalent minimal example for Jetbrains, which requires setting up an [embeddings provider](../customize/model-roles/embeddings.mdx).
 
 <Tabs>
   <Tab title="YAML">
@@ -405,4 +408,4 @@ The following configuration example includes:
   </Tab>
 </Tabs>
 
-This setup could also involve enabling Chromium as a backup for local documentation through the [User Settings Page](../settings).
+This setup could also involve enabling Chromium as a backup for local documentation through the [User Settings Page](../customize/settings).
