--- a/docs/reference/json-reference.mdx
+++ b/docs/reference/json-reference.mdx
@@ -20,7 +20,7 @@ Below are details for each property that can be set in `config.json`. The config
 
 ## `models`
 
-Your **chat** models are defined here, which are used for [Chat](/features/chat/how-it-works), [Edit](/features/edit/how-it-works) and [VS Code actions](/customize/overview#vscode-actions).
+Your **chat** models are defined here, which are used for [Chat](/features/chat/how-it-works) and [Edit](/features/edit/how-it-works).
 
 Each model has specific configuration options tailored to its provider and functionality, which can be seen as suggestions while editing the json.
 
@@ -485,18 +485,7 @@ Several experimental config parameters are available, as described below:
   - `applyCodeBlock`: Model title for applying code blocks.
   - `repoMapFileSelection`: Model title for repo map selections.
 
-- `quickActions`: Array of custom quick actions
 
-  - `title` (**required**): Display title for the quick action.
-  - `prompt` (**required**): Prompt for quick action.
-  - `sendToChat`: If `true`, sends result to chat; else inserts in document. Default is `false`.
-
-- `contextMenuPrompts`:
-
-  - `comment`: Prompt for commenting code.
-  - `docstring`: Prompt for adding docstrings.
-  - `fix`: Prompt for fixing code.
-  - `optimize`: Prompt for optimizing code.
 
 - `modelContextProtocolServers`: See [Model Context Protocol](/customize/deep-dives/mcp)
 
@@ -508,16 +497,6 @@ config.json
 {
   "experimental": {
     "modelRoles": { "inlineEdit": "Edit Model" },
-    "quickActions": [
-      {
-        "title": "Tags",
-        "prompt": "Return a list of any function and class names from the included code block",
-        "sendToChat": true
-      }
-    ],
-    "contextMenuPrompts": {
-      "fixGrammar": "Fix grammar in the above but allow for typos."
-    },
     "modelContextProtocolServers": [
       {
         "transport": {
@@ -533,7 +512,7 @@ config.json
 
 ## Fully deprecated settings
 
-Some deprecated `config.json` settings are no longer stored in config and have been moved to be editable through the [User Settings Page](/customize/settings). If found in `config.json`, they will be auto-migrated to User Settings and removed from `config.json`.
+Some deprecated `config.json` settings are no longer stored in config and have been moved to be editable through the user settings. If found in `config.json`, they will be auto-migrated to User Settings and removed from `config.json`.
 
 - `allowAnonymousTelemetry`: This value will be migrated to the safest merged value (`false` if either are `false`).
 
@@ -562,4 +541,4 @@ Some deprecated `config.json` settings are no longer stored in config and have b
   - `displayRawMarkdown`
   - `showChatScrollbar`
 
-  See [User Settings Page](/customize/settings) for more information about each option.
+
