--- a/docs/reference/deprecated-codebase.mdx
+++ b/docs/reference/deprecated-codebase.mdx
@@ -1,16 +1,32 @@
 ---
-title: "How to Set Up @Codebase Context Provider in Continue"
-description: Retrieve relevant context and answers from your codebase using embeddings and keyword search.
-keywords: [talk, embeddings, reranker, codebase, experimental]
-sidebarTitle: "@Codebase"
+title: "@Codebase (Deprecated)"
+description: Deprecated codebase context provider - use the new codebase awareness approach instead
+keywords: [deprecated, codebase, embeddings, context, legacy]
+noindex: true
 ---
+
+<Warning>
+  **This feature is deprecated.** The `@Codebase` context provider has been deprecated in favor of a more integrated approach to codebase awareness. Please refer to our [Guide on Making Agents Aware of Codebases and Documentation](/guides/codebase-documentation-awareness) for the recommended approach.
+</Warning>
+
+## Migration Guide
+
+If you're currently using `@Codebase` or `@Folder` context providers, please migrate to the new approach outlined in our [codebase and documentation awareness guide](/guides/codebase-documentation-awareness). The new approach provides:
+
+- Better integration with Continue's Agent features
+- More intelligent context selection
+- Improved performance and accuracy
+
+## Legacy Documentation
+
+*Below is the original documentation for the `@Codebase` context provider, preserved for reference*
 
 Continue indexes your codebase so that it can later automatically pull in the most relevant context from throughout your workspace. This is done via a combination of embeddings-based retrieval and keyword search. By default, all embeddings are calculated locally using `transformers.js` and stored locally in `~/.continue/index`.
 
 <Info>
   **Note:** `transformers.js` cannot be used in JetBrains IDEs. However, you can
   select a different embeddings model from [the list
-  here](../model-roles/embeddings).
+  here](../customize/model-roles/embeddings).
 </Info>
 
 ## How to Use @Codebase and @Folder Context Providers
@@ -98,7 +114,3 @@ Continue also supports a **global** `.continueignore` file that will be respecte
 If you want to see exactly what files Continue has indexed, the metadata is stored in `~/.continue/index/index.sqlite`. You can use a tool like [DB Browser for SQLite](https://sqlitebrowser.org/) to view the `tag_catalog` table within this file.
 
 If you need to force a refresh of the index, reload the VS Code window with <kbd>cmd/ctrl</kbd> + <kbd>shift</kbd> + <kbd>p</kbd> + "Reload Window".
-
-## How Repository Map Enhances Codebase Understanding
-
-Models in the Claude 3, Llama 3.1/3.2, Gemini 1.5, and GPT-4o families will automatically use a [repository map](/customize/context/codebase#repository-map) during codebase retrieval, which allows the model to understand the structure of your codebase and use it to answer questions. Currently, the repository map only contains the filepaths in the codebase.
