--- a/docs/features/agent/model-setup.mdx
+++ b/docs/features/agent/model-setup.mdx
@@ -27,3 +27,7 @@ Instead of relying solely on native tool calling APIs (which vary between provid
 ### How to Configure Agent Mode
 
 Agent mode automatically determines whether to use native or system message tools based on the model's capabilities. No additional configuration is required - simply select your model and Continue handles the rest.
+
+## How to Check Model Compatibility
+
+To see which models support specific features like tool use (for Agent mode) and image input, check out our [Model Capabilities guide](/customize/deep-dives/model-capabilities).
