--- a/docs/customize/deep-dives/custom-providers.mdx
+++ b/docs/customize/deep-dives/custom-providers.mdx
@@ -336,7 +336,7 @@ The HttpContextProvider makes a POST request to the url passed in the configurat
         params:
           url: "https://api.example.com/v1/users"
           headers:
-            - Authorization: "Bearer 123"
+            - Authorization: "Bearer <token>"
     ```
   </Tab>
   <Tab title="JSON (Deprecated)">
