--- a/docs/features/autocomplete/next-edit.mdx
+++ b/docs/features/autocomplete/next-edit.mdx
@@ -71,7 +71,7 @@ Next Edit activates automatically when:
 
 Next Edit requires:
 
-- Compatible AI models (Mercury Coder)
+- Compatible AI models (Mercury Coder or Instinct)
 - Continue development team access
 - VS Code (JetBrains support coming soon)
 - **API Keys**: Organizations can add API keys to [org secrets](/hub/secrets/secret-types) for team-wide access. Individual users need to provide their own API keys in their [model configuration](/customize/model-providers/overview)
@@ -117,6 +117,7 @@ Next Edit requires:
 Next Edit requires AI models specifically trained for code prediction:
 
 - **Mercury Coder**: Primary model optimized for next edit prediction
+- **Instinct**: The leading open Next Edit model, trained by Continue
 
 ### Automatic Detection
 
