--- a/docs/guides/continuous-ai-readiness-assessment.mdx
+++ b/docs/guides/continuous-ai-readiness-assessment.mdx
@@ -1,7 +1,7 @@
 ---
 title: Assessing Your Team's Readiness for Continuous AI
 description: Complete framework to evaluate team readiness for Continuous AI adoption with maturity levels, assessment criteria, and implementation roadmap.
-sideBarTitle: Continuous AI Readiness Assessment
+sidebarTitle: Continuous AI Readiness Assessment
 ---
 
 <Info>
