--- a/docs/guides/instinct.mdx
+++ b/docs/guides/instinct.mdx
@@ -11,6 +11,10 @@ description: "Learn how to run Instinct, Continue's leading open Next Edit model
 
 We recently released Instinct, a state-of-the-art open Next Edit model. Robustly fine-tuned from Qwen2.5-Coder-7B, Instinct intelligently predicts your next move to keep you in flow. To learn more about the model, check out [our blog post](https://blog.continue.dev).
 
+<Frame>
+  <img src="/images/instinct.gif" />
+</Frame>
+
 ### 1. Install Ollama
 
 If you haven't already installed Ollama, see our guide [here](./ollama-guide.mdx).
