Improve Ollama guide introduction in offline setup guide
- Move Ollama guide link to dedicated paragraph for better visibility
- Remove parenthetical link from bullet point to clean up list formatting
- Keep original link in next steps section for comprehensive reference
- Improves user flow by prominently directing users to detailed setup instructions

--- a/docs/guides/running-continue-without-internet.mdx
+++ b/docs/guides/running-continue-without-internet.mdx
@@ -17,9 +17,11 @@ For air-gapped environments, download the latest .vsix file from the [Open VSX R
 
 Choose one of these local model providers:
 
-- **[Ollama](https://ollama.com/)** - Recommended for ease of use (see our [complete Ollama guide](/guides/ollama-guide))
+- **[Ollama](https://ollama.com/)** - Recommended for ease of use
 - **[LM Studio](https://lmstudio.ai/)** - GUI-based model management
 - **[llama.cpp](https://github.com/ggml-org/llama.cpp)** - Direct model serving
+
+We recommend starting with Ollama for its simplicity and reliability. For comprehensive setup instructions, installation troubleshooting, and performance optimization, see our [complete Ollama guide](/guides/ollama-guide).
 
 ### Step 3: Download models
 
