fix(docs): broken settings page links

--- a/docs/reference/deprecated-docs.mdx
+++ b/docs/reference/deprecated-docs.mdx
@@ -6,7 +6,11 @@ noindex: true
 ---
 
 <Warning>
-  **This feature is deprecated.** The `@Docs` context provider has been deprecated in favor of a more integrated approach to documentation awareness. Please refer to our [Guide on Making Agents Aware of Codebases and Documentation](/guides/codebase-documentation-awareness) for the recommended approach.
+  **This feature is deprecated.** The `@Docs` context provider has been
+  deprecated in favor of a more integrated approach to documentation awareness.
+  Please refer to our [Guide on Making Agents Aware of Codebases and
+  Documentation](/guides/codebase-documentation-awareness) for the recommended
+  approach.
 </Warning>
 
 ## Migration Guide
@@ -219,8 +223,8 @@ If your documentation is private, you can skip the default crawler and use a loc
   The default local crawler is a lightweight tool that cannot render sites that
   are dynamically generated using JavaScript. If your sites need to be rendered,
   you can enable the experimental `Use Chromium for Docs Crawling` feature from
-  your User Settings Page. This will download and install Chromium
-  to `~/.continue/.utils`, and use it as the local crawler. **Note:** Chromium
+  your User Settings Page. This will download and install Chromium to
+  `~/.continue/.utils`, and use it as the local crawler. **Note:** Chromium
   crawling support is being deprecated and may be removed in future versions.
 </Info>
 
@@ -408,4 +412,4 @@ The following configuration example includes:
   </Tab>
 </Tabs>
 
-This setup could also involve enabling Chromium as a backup for local documentation through the [User Settings Page](../customize/settings).
+This setup could also involve enabling Chromium as a backup for local documentation through the User Settings Page (Gear Icon).
