updating tetrate agent router service provider information
Signed-off-by: Erica Hughberg <erica.sundberg.90@gmail.com>

--- a/docs/customize/model-providers/top-level/tetrate_agent_router_service.mdx
+++ b/docs/customize/model-providers/top-level/tetrate_agent_router_service.mdx
@@ -26,6 +26,8 @@ Go to the [Tetrate Agent Router Service model catalog](https://router.tetrate.ai
 
 ## Configuration Options
 
+As Tetrate Agent Router Service is an OpenAI API compatible provider, you can configure it like any other OpenAI API compatible provider. Therefore you will be setting `provider: openai` and `apiBase: https://api.router.tetrate.ai/v1`.
+
 Update your Continue configuration file (`~/.continue/config.yaml`) with your Tetrate Agent Router Service API key:
 
 ### On your local machine
