--- a/docs/hub/assistants/create-an-assistant.mdx
+++ b/docs/hub/assistants/create-an-assistant.mdx
@@ -1,34 +1,34 @@
 ---
-title: "How to Create an AI Assistant"
-description: "Learn how to create custom AI coding assistants in Continue Hub by remixing existing assistants or building new ones from scratch with reusable blocks and YAML configuration."
-sidebarTitle: "Create an AI Assistant"
+title: "How to Create an AI Agent"
+description: "Learn how to create custom AI coding agents in Continue Hub by remixing existing agents or building new ones from scratch with reusable blocks and YAML configuration."
+sidebarTitle: "Create an AI Agent"
 ---
 
-## How to Create an AI Assistant from Scratch
+## How to Create an AI Agent from Scratch
 
-To create an assistant from scratch, select “New assistant” in the top bar.
+To create an agent from scratch, select “New agent” in the top bar.
 
-![New assistant button](/images/hub/assistants/images/assistant-new-button-16070e2cff9ce25ec9ebfeecb0e2f2b5.png)
+![New agent button](/images/hub/assistants/images/assistant-new-button-16070e2cff9ce25ec9ebfeecb0e2f2b5.png)
 
-Choose a name, slug, description, and icon for your assistant.
+Choose a name, slug, description, and icon for your agent.
 
-The easiest way to create an assistant is to click "Create assistant" with the default configuration and then add / remove blocks using the sidebar.
+The easiest way to create an agent is to click "Create agent" with the default configuration and then add / remove blocks using the sidebar.
 
-Alternatively, you can edit the assistant YAML directly before clicking "Create assistant". Refer to examples of assistants on [hub.continue.dev](https://hub.continue.dev/explore/assistants) and visit the [YAML Reference](/reference#complete-yaml-config-example) docs for more details.
+Alternatively, you can edit the agent YAML directly before clicking "Create agent". Refer to examples of agents on [hub.continue.dev](https://hub.continue.dev) and visit the [YAML Reference](/reference#complete-yaml-config-example) docs for more details.
 
-![New assistant YAML](/images/hub/assistants/images/assistant-create-yaml-a991e5a81506f1c3ba611a664a50734c.png)
+![New agent YAML](/images/hub/assistants/images/assistant-create-yaml-a991e5a81506f1c3ba611a664a50734c.png)
 
-## How to Remix an Assistant
+## How to Remix an Agent
 
-You can also create an assistant by remixing an existing one. This is useful if you want to start with a pre-configured assistant and make modifications.
+You can also create an agent by remixing an existing one. This is useful if you want to start with a pre-configured agent and make modifications.
 
 By clicking the “remix” button, you’ll be taken to the “Create a remix” page.
 
-![Remix Assistant Button](/images/hub/assistants/images/assistant-remix-button-728ececa73983140eeab42e33cc3903b.png)
+![Remix Agent Button](/images/hub/assistants/images/assistant-remix-button-728ececa73983140eeab42e33cc3903b.png)
 
 Once here, you’ll be able to
 
 1. add or remove blocks in YAML configuration
 2. change the name, description, icon, etc.
 
-Clicking “Create assistant” will make this assistant available for use.
+Clicking “Create agent” will make this agent available for use.
