Reformat info callout

--- a/docs/guides/posthog-session-analysis.mdx
+++ b/docs/guides/posthog-session-analysis.mdx
@@ -206,10 +206,15 @@ echo "✅ Analysis complete! Check the output above for optimization opportuniti
 ```
 
 <Info>
-  **What This Script Does:** 1. **Fetches** recent session recordings from
-  PostHog API 2. **Filters** for problematic sessions (errors or long durations)
-  3. **Analyzes** with Continue CLI to identify specific UX issues 4.
-  **Provides** actionable technical recommendations
+
+**What This Script Does:**
+
+1. **Fetches** recent session recordings from
+   PostHog API
+2. **Filters** for problematic sessions (errors or long durations)
+3. **Analyzes** with Continue CLI to identify specific UX issues
+4. **Provides** actionable technical recommendations
+
 </Info>
 
 Make the script executable:
